Added log/register & more
